# NeoxAgent

./: .gitignore  Cargo.toml  INSTALL.md  README.md  RESUMEN_PROYECTO.md  TODO.md  build_errors.txt  build_output.txt  config.toml  config.toml.server  config_vps.toml  deploy_80.sh  deploy_nginx_demo.sh  deploy_to_vps.sh  deploy_with_pass.sh  fix_permissions.sh  install_neox.sh  neox-agent  package-lock.json  reinstall_neox.sh  setup_vps.sh  test_lifecycle.sh  test_neox_agent.ps1  test_runner_wsl.sh  test_ws_images.py  update.sh  update_gpt54.sh  verify_paths.sh  verify_paths_v2.sh  verify_paths_v3.sh  vps_demo.sh
.github/workflows/: build.yml
docs/: PHASE_1_SUMMARY.md  ROADMAP_NEOX_AGENT.md  UML_DIAGRAMS.md
scripts/: install-neox-guard.sh  setup.sh  test_lifecycle.sh  test_runner_wsl.sh  test_vps.sh  verify_paths.sh
src/: auth.rs  config.rs  cors.rs  error.rs  main.rs  quota.rs  time_utils.rs
src/models/: backups.rs  container.rs  files.rs  images.rs  kube.rs  mod.rs  network.rs  pod.rs  volume.rs
src/routes/: backups.rs  containers.rs  files.rs  guard.rs  images.rs  kube.rs  mod.rs  networks.rs  pods.rs  system.rs  systemd.rs  volumes.rs  ws.rs
src/services/: mod.rs  podman.rs
