[package]
name = "neoxagent"
version = "0.1.0"
edition = "2021"
description = "Lightweight Podman management agent for Jexactyl panel"
authors = ["neoxhost"]

[dependencies]
# Podman (SDK Nativo)
podman-api = "0.10"

# Web Server
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Compression (backups)
tar = "0.4"
flate2 = "1"

# Crypto (checksums)
sha2 = "0.10"

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true          # Link Time Optimization
codegen-units = 1   # Single codegen unit for max optimization
strip = true        # Strip debug symbols
panic = "abort"     # Reduce binary size
